# operatingsystemslabs

./: README.md
clab1gcc/: Makefile  lab1  main.c  size_info  size_info.c  size_of_types  strings  strings.c  strings.h
clab2/: Makefile  lab2  lab2.c  lab2_sensor  lab2_sensor.c  lab2_sensor.h  lab2_swappointers  lab2_swappointers.c  lab2_swappointers.h
startcode/: sensor_node  server_log.txt  test_server  test_server.c
startcode2024/: CMakeLists.txt
startcode2024/ex1/: dplist.c  your_program
startcode2024/milestone1/: dplist.c  dplist.h  dplist_test.c
startcodeplab1/: datamgr.c  datamgr.h
startcodeplab1/lib/: dplist.h
startcodeplab2/ex1/: sensor_db.c  sensor_db.csv
startcodeplab2/ex2/: Makefile  case_reversal  case_reversal.c  case_reversal.h  main.c
startcodeplab2/milestone2/: logger.c  sensor_db.c  sensor_db.csv
startcodeplab4/: Makefile  config.h  main.c  sbuffer.c  sensor_data  sensor_data.csv  sensor_data_out.csv  sensor_data_text
studentsource2024/: connmgr.c  connmgr.h  datamgr.c  datamgr.h  main.c  sbuffer.c  sbuffer.h  sensor_db.c  sensor_db.h  testConnMgrwithBuffer.sh
